modules/k8s/env/stg/sergio/sergio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: $USER
  labels:
    app: nextcloud-frontal
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nextcloud-frontal
  type: NodePort
